Refactor: 사용자 식별자 'userNo'로 통일 및 JPA 복합키 구조 개선